--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ python-dotenv==1.0.1
 python-dateutil==2.9.0
 openai==1.55.3
 spacy==3.8.7
-requests==2.31.0
+requests>=2.32.3  # CVE-2024-35195 fix (session cookie leakage)
 fastembed==0.4.2
 onnxruntime<1.20  # Pin to avoid issues with fastembed 0.4.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
