fix(security): harden Docker images, tokens, and add security headers
- Add non-root appuser (uid 1001) to all three Dockerfiles to prevent
  container breakout via root privilege escalation
- Remove weak default API tokens in docker-compose.yml; use :? syntax
  so compose fails fast with a clear error when tokens are not set
- Update fastembed model path from /root/ to /home/appuser/ to match
  non-root user home directory
- Add @app.after_request security headers to every Flask response:
  X-Content-Type-Options, X-Frame-Options, Content-Security-Policy,
  Referrer-Policy
- Fix pre-existing test_content_size.py auth failure: patch API_TOKEN
  to None in app_client fixture so content-size tests bypass auth

Addresses: Docker root user (CRITICAL), default weak tokens (CRITICAL),
missing security headers (HIGH) from security audit.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,11 +43,11 @@ services:
       FALKORDB_PASSWORD: ${FALKORDB_PASSWORD:-}
       QDRANT_URL: http://qdrant:6333
       QDRANT_API_KEY: ${QDRANT_API_KEY:-}
-      AUTOMEM_API_TOKEN: ${AUTOMEM_API_TOKEN:-test-token}
-      ADMIN_API_TOKEN: ${ADMIN_API_TOKEN:-test-admin-token}
+      AUTOMEM_API_TOKEN: ${AUTOMEM_API_TOKEN:?AUTOMEM_API_TOKEN must be set (see .env.example)}
+      ADMIN_API_TOKEN: ${ADMIN_API_TOKEN:?ADMIN_API_TOKEN must be set (see .env.example)}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       EMBEDDING_PROVIDER: ${EMBEDDING_PROVIDER:-auto}  # auto|openai|local|placeholder
-      AUTOMEM_MODELS_DIR: /root/.config/automem/models  # Keep in sync with volume mount
+      AUTOMEM_MODELS_DIR: /home/appuser/.config/automem/models  # Keep in sync with volume mount
     depends_on:
       falkordb:
         condition: service_healthy
@@ -55,7 +55,7 @@ services:
         condition: service_started
     volumes:
       - .:/app
-      - fastembed_models:/root/.config/automem/models  # Persist embedding models
+      - fastembed_models:/home/appuser/.config/automem/models  # Persist embedding models
     restart: unless-stopped
 
   # Optional: FalkorDB Browser for visualization
