--- a/mcp-sse-server/Dockerfile
+++ b/mcp-sse-server/Dockerfile
@@ -11,7 +11,14 @@ RUN npm ci --only=production
 # Copy application code
 COPY server.js ./
 
+# Create non-root user for security
+RUN groupadd --gid 1001 appgroup && \
+    useradd --uid 1001 --gid appgroup --shell /bin/bash --create-home appuser && \
+    chown -R appuser:appgroup /app
+
 # Railway injects PORT automatically
 EXPOSE 8080
+
+USER appuser
 
 CMD ["node", "server.js"]
